[gd_scene load_steps=5 format=2]

[ext_resource path="res://mobile/MobileButtons1.gd" type="Script" id=1]
[ext_resource path="res://assets/images/mobile_button_left.png" type="Texture" id=2]
[ext_resource path="res://assets/images/mobile_button_right.png" type="Texture" id=3]
[ext_resource path="res://assets/images/mobile_button_jump.png" type="Texture" id=4]

[node name="MobileButons" type="Node2D"]
z_as_relative = false
script = ExtResource( 1 )

[node name="ButtonLeft" type="TouchScreenButton" parent="."]
position = Vector2( 35, 913 )
scale = Vector2( 4, 4 )
normal = ExtResource( 2 )

[node name="ButtonRight" type="TouchScreenButton" parent="."]
position = Vector2( 268, 913 )
scale = Vector2( 4, 4 )
normal = ExtResource( 3 )

[node name="ButtonJump" type="TouchScreenButton" parent="."]
position = Vector2( 1694, 923 )
scale = Vector2( 4, 4 )
normal = ExtResource( 4 )
